@startuml
skinparam classAttributeIconSize 0
hide circle

!include colors.puml

Decodex -> "1" DataManager

DataManager ---> "0..1 \nOriginal" Data
DataManager ---> "0..1 \nCurrent" Data


class Decodex DECODEX_COLOR {
  - initDecodex(): void
  + run(): void
  + {static} main(): void
}

class DataManager DATA_COLOR {
  + getOriginalData(): Data
  + getCurrentData(): Data
  + setOriginalData(originalData: Data): Data
  + setCurrentData(currentData: Data): Data
  + resetToOriginalData(): void
}

class Data DATA_COLOR {
  - rawBytes: byte[]
  + getRawBytes(): byte[]
}

@enduml